Fix icon color and alignment

--- a/app/assets/stylesheets/framework/blank.scss
+++ b/app/assets/stylesheets/framework/blank.scss
@@ -126,7 +126,6 @@
 
   .blank-state-icon {
     min-width: 215px;
-    color: transparent;
   }
 }
 
